k8s/services/external/app/home-assistant-grafana/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-grafana
spec:
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant-grafana
  labels:
    kubernetes.io/service-name: home-assistant-grafana
addressType: FQDN
ports:
  - name: http
    protocol: TCP
    port: 3000
endpoints:
  - addresses:
      - homeassistant.bar.risson.net
    conditions: {}
