k8s/services/external/app/home-assistant-grafana/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-grafana
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: home-assistant-grafana
  hostnames:
    - grafana.phemma.fr
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: home-assistant-grafana
          port: 3000
